List Item: Fix divider color on mobile devices (#2146)

--- a/src/components/common/ChatOrUserPicker.scss
+++ b/src/components/common/ChatOrUserPicker.scss
@@ -67,6 +67,11 @@
   .ListItem {
     position: absolute;
     width: 100%;
+
+    body.is-ios &:not(:last-of-type)::after,
+    body.is-android &:not(:last-of-type)::after {
+      right: -0.5rem;
+    }
   }
 
   .ListItem.chat-item-clickable {
