--- a/src/components/ui/ListItem.scss
+++ b/src/components/ui/ListItem.scss
@@ -9,7 +9,7 @@
       bottom: 0;
       left: 4.5rem;
       right: 0;
-      height: 1px;
+      height: 0.0625rem;
       /* stylelint-disable-next-line plugin/whole-pixel */
       box-shadow: inset 0 -0.03125rem 0 0 var(--color-dividers);
     }
@@ -20,14 +20,6 @@
 
     &.no-icon::after {
       left: 0;
-    }
-  }
-
-  // Using half-pixel height is efficient on iOS but not supported on Android, so `transform` is used instead
-  body.is-android & {
-    &:not(:last-of-type)::after {
-      height: 0.0625rem;
-      transform: scaleY(0.25);
     }
   }
 
